test/errors/parsing/implicitSubModule.compopts
--detailed-errors # implicitSubModule-detailed.good
--no-detailed-errors # implicitSubModule-brief.good
